# praktika

./: CMakeLists.txt  README.md
documents/: RYE-10-docs.txt  RYE-11-docs.txt  RYE-12-docs.txt  RYE-13-docs.txt  RYE-14-docs.txt  RYE-15-docs.txt  RYE-16-docs.txt  RYE-17-docs.txt  RYE-2-docs.txt  RYE-3-docs.txt  RYE-4-docs.txt  RYE-5-docs.txt  RYE-6-docs.txt  RYE-7-docs.txt  RYE-8-docs.txt  RYE-9-docs.txt
src/: main.cpp
src/api/: ApiServer.cpp  ApiServer.h
src/app/: Application.cpp
src/config/: MethodologyLoader.cpp  MethodologyLoader.h
src/core/: Criterion.h  Rule.h  ScoringEngine.cpp  ScoringEngine.h
src/diagnostics/: Logger.cpp  Logger.h
src/models/: Methodology.h  Request.h  Response.h  Result.h
tests/: CMakeLists.txt
